--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ul>
         </nav>
         <div class="titleBgHome">
-            <h1 id="jEsteveTitle" class="klanimate" data-animation="back" data-delay="0.5">Jonathan Esteve Aranda</h1>
+            <h1 id="jEsteveTitle" >Jonathan Esteve Aranda</h1>
         </div>
     </div>
 
@@ -46,32 +46,32 @@
     <img id="controlAudio" onclick="playAndPauseAudio()" src="./assets/icons/icons8-play-50.png" custom-status="pause">
 
     <div class="container">
-        <div class="inicioImg row-1"><img src="./assets/images/foto3.jpg" class="klanimate" data-x="-100" alt="Imagen Jonathan Esteve Aranda"></div>
+        <div class="inicioImg row-1"><img src="./assets/images/foto3.jpg" id="imgBiografia" alt="Imagen Jonathan Esteve Aranda"></div>
         <div id="biografia" class="inicio row-1">
-            <h1 id="titleBiografia" class="text-center title klanimate colorTheme" data-y="-100">Biografía</h1>
-            <p id="biop1" class="klanimate colorTheme" data-x="100">Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
+            <h1 id="titleBiografia" class="text-center title colorTheme">Biografía</h1>
+            <p id="biop1" class="colorTheme">Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
                 y tras haber obtenido más de 10 premios nacionales e internacionales en prestigiosos concursos 
                 como el Francisco Tárrega de Benicássim, Concurso de música de Benidorm entre otros…Jonathan Esteve Aranda 
                 se sitúa actualmente como uno de los más destacados guitarristas clásicos de su generación.</p>
-            <p id="biop2" class="klanimate colorTheme" data-x="-100">Su talento, versatilidad y dominio de los diferentes periodos del repertorio para guitarra clásica, 
+            <p id="biop2" class="colorTheme">Su talento, versatilidad y dominio de los diferentes periodos del repertorio para guitarra clásica, 
                 lo convierten en un músico que toca con una personalidad muy destacada y definida, ligada siempre a 
                 una amplia técnica que ofrece grandes posibilidades sonoras. Su guitarra ha sonado en países Europeos 
                 como España, Francia, Reino Unido…Entre otras, se presenta en importantes salas como: Palacio de ferias y 
                 congresos de Málaga, Teatro Arniches, Auditorio Andrés Gaos, Teatro Concha Segura en España, St Olave Hart Street 
                 (Londres-Inglaterra) Auditorio Maurice Ravel (Francia)…</p>
-            <p id="biop3" class="klanimate colorTheme" data-x="100">En 2015, destaca su interpretación y grabación en directo del famoso “Concierto de Aranjuez” junto con la orquesta 
+            <p id="biop3" class="colorTheme">En 2015, destaca su interpretación y grabación en directo del famoso “Concierto de Aranjuez” junto con la orquesta 
                 sinfónica Castelar. Ha trabajado y compartido escenario con directores de renombre mundial como José Luis Granados, 
                 Rafael Vilaplana o Salvador Brotons.</p>
-            <p id="biop4" class="klanimate colorTheme" data-x="-100">Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair de Málaga 
+            <p id="biop4" class="colorTheme">Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair de Málaga 
                 (2014), XXVIII Curso Internacional de Música de Benidorm, Festival internacional andaluz de Saint-Jean de Luz (Francia). 
                 Su iniciativa para organizar eventos relacionados con el mundo de la guitarra, le llevan a crear el Certamen de guitarra 
                 clásica “Ciudad de Castalla” del cual es promotor y director.</p>
-            <p id="biop5" class="klanimate colorTheme" data-x="100">Jonathan Esteve nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert, Victor Bravo y Antonio 
+            <p id="biop5" class="colorTheme">Jonathan Esteve nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert, Victor Bravo y Antonio 
                 Clavel en los conservatorios de Villena y Oscar Esplá en Alicante, obtiene el título superior en guitarra con Matrícula 
                 de Honor. Guitarristas como Carles Trepat, Aniello Desiderio, Carlos Bonell… han reconocido y admirado su forma de tocar.</p>
         </div>
         <div id="galeria" class="galeria col-1-2 row-2">
-            <h1 id="titleGaleria" class="text-center title" data-y="100">Galeria</h1>
+            <h1 id="titleGaleria" class="text-center title">Galeria</h1>
             <div class="galleria">
                 <img src="./assets/images/galeria/3-min.jpg" alt="">
                 <img src="./assets/images/galeria/4-min.jpg" alt="">
@@ -87,9 +87,9 @@
             </div>
         </div>
         <div id="videos" class="videos col-1-2 row-3">
-            <h1 id="titleVideos" class="text-center title klanimate" data-y="-100">Vídeos</h1>
-            <h1 id="first-video" class="text-center first-title-video klanimate" data-x="100">Rosita Polka by Francisco Tárrega</h1>
-            <!-- <div class="container-video klanimate" data-x="-100">
+            <h1 id="titleVideos" class="text-center title">Vídeos</h1>
+            <!-- <h1 id="titleFirstVideo" class="text-center first-title-video">Rosita Polka by Francisco Tárrega</h1>
+            <div id="containerFirstVideo" class="container-video">
                 <iframe 
                 width="560" 
                 height="315"
@@ -99,8 +99,8 @@
                 allowfullscreen>
                 </iframe>
             </div>
-            <h1 class="text-center klanimate" data-x="100">Allegro BWV 1003 by J.S.Bach Sonata nº2</h1>
-            <div class="container-video klanimate" data-x="-100">
+            <h1 id="titleSecondVideo" class="text-center">Allegro BWV 1003 by J.S.Bach Sonata nº2</h1>
+            <div id="containerSecondVideo" class="container-video">
                 <iframe 
                 width="560" 
                 height="315"
@@ -110,8 +110,8 @@
                 allowfullscreen>
                 </iframe>
             </div>
-            <h1 class="text-center klanimate" data-x="100">Danza Paraguaya Guaraní by Agustín Barrios Mangoré</h1>
-            <div class="container-video klanimate" data-x="-100">
+            <h1 id="titleThreeVideo" class="text-center">Danza Paraguaya Guaraní by Agustín Barrios Mangoré</h1>
+            <div id="containerThreeVideo" class="container-video">
                 <iframe 
                 width="560" 
                 height="315"
@@ -123,9 +123,7 @@
             </div> -->
         </div>
         <div id="agenda" class="agenda row-4">
-            <h1 id="titleAgenda" class="text-center title klanimate colorTheme" data-y="-100">Agenda</h1>
-            <!-- <p id="p1agenda" class="text-center">No te pierdas ni un solo concierto de Jonathan Esteve.</p> -->
-            <!-- <p id="p2agenda" class="text-center">Siguelo y entérate de todos sus conciertos y acontecimientos.</p> -->
+            <h1 id="titleAgenda" class="text-center title colorTheme">Agenda</h1>
             <img id="imgDisco" src="./assets/icons/icons8-cd-100.png" alt="">
             <p id="p3agenda" class="text-center colorTheme">En su página de Facebook podrás encontrar información a cerca de sus nuevos conciertos y otros datos de interés.</p>
             <img id="imgFace" src="./assets/icons/icons8-facebook-nuevo-100.png" class="klanimate" data-x="100" alt="">
