Cambio de tipografia y detallitos

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body onload="onLoad()">
     <div id="pantallaBloqueo">
-        <h1 id="btnPantallaBloqueo" onclick="clickBtnaToToGetIn()">ENTRAR</button>
+        <h1 id="btnPantallaBloqueo" class="btn" onclick="clickBtnaToToGetIn()">ENTRAR</button>
         <h1 id="h1PantallaBloqueo">Jonathan Esteve Aranda</h1>
         <img id="imgPantallaBloqueo" src="./assets/icons/icons8-guitar.svg" alt="">
         <h2 id="h2PantallaBloqueo">- Guitarrista Clásico - <br> - Classical Guitarist -</h2>
     </div>
 
-    <img src="./assets/icons/espain.png" class="icon-spain" onclick="changeLanguage('es')" alt="">
-    <img src="./assets/icons/reino-unido.png" class="icon-uk" onclick="changeLanguage('en')" alt="">
+    <img src="./assets/icons/espain.png" class="btn icon-spain" onclick="changeLanguage('es')" alt="">
+    <img src="./assets/icons/reino-unido.png" class="btn icon-uk" onclick="changeLanguage('en')" alt="">
 
     <div class="bgHome" id="inicio">
         <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
