cambio tamaño de fuente y detallitos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body onload="onLoad()">
     <div id="pantallaBloqueo">
-        <div id="btnPantallaBloqueo" class="btn" onclick="clickBtnaToToGetIn()">ENTRAR</div>
+        <div id="btnPantallaBloqueo" class="btn" onclick="clickBtnaToToGetIn()">BIENVENIDO</div>
         <div id="idiomaPreload">
             <span id="spanPreloadIdiomaEs" class="btn" onclick="changeLanguage('es')"><img src="./assets/icons/espain.png" class="icon-idioma-preload" alt=""> Español</span>
             <span id="spanPreloadIdiomaIn" class="btn" onclick="changeLanguage('en')"><img src="./assets/icons/reino-unido.png" class="icon-idioma-preload" alt=""> English</span>
