--- a/index.html
+++ b/index.html
@@ -127,12 +127,10 @@
         </div>
         <div id="agenda" class="agenda row-4">
             <h1 id="titleAgenda" class="text-center title klanimate" data-y="-100">Agenda</h1>
-            <p id="p1agenda" class="text-center">No te pierdas ni un solo consierto de Jonathan Esteve.</p>
-            <p id="p2agenda" class="text-center">Siguelo y entérate de todos sus conciertos y acontecimientos.</p>
             <img id="imgDisco" src="./assets/icons/icons8-cd-100.png" alt="">
             <p id="p3agenda" class="text-center">En su página de Facebook podrás encontrar información a cerca de sus nuevos conciertos y otros datos de interés.</p>
             <img id="imgFace" src="./assets/icons/icons8-facebook-nuevo-100.png" class="klanimate" data-x="100" alt="">
-            <a href="https://www.facebook.com/Jonathan-Esteve-Aranda-Classical-Guitarist-1410717555869368/" target="_blank">Jonathan Estheve Aranda</a>
+            <a href="https://www.facebook.com/Jonathan-Esteve-Aranda-Classical-Guitarist-1410717555869368/" target="_blank">Jonathan Esteve Aranda</a>
         </div>
         <div class="agendaImg row-4 klanimate" data-x="100"><img src="./assets/images/foto2.jpg" alt=""></div>
         <div class="contactoImg row-5"><img src="./assets/images/foto4.jpg" alt=""></div>
@@ -140,9 +138,9 @@
             <h1 id="titleContacto" class="text-center title klanimate" data-y="-100">Contacto y Redes</h1>
             <div class="contacto-grid">
                 <img src="./assets/icons/icons8-gmail-100.png" class="icon-gmail klanimate" data-x="-100" data-delay="0" alt=""><a href="mailto:asfdasfperon@asdfnvodld.com" class="klanimate" data-x="100" data-delay="0">jesteve.info@gmail.com</a>
-                <img src="./assets/icons/icons8-facebook-160.png" class="klanimate" data-x="-100" data-delay="0.5" alt=""><a href="https://www.facebook.com/jonathan.estevearanda" class="klanimate" data-x="100" data-delay="0.5" target="_blank">Jonathan Estheve Aranda</a>
-                <img src="./assets/icons/icons8-youtube-96.png" class="klanimate" data-x="-100" data-delay="1" alt=""><a href="https://www.youtube.com/channel/UCF3VzTUjZsOYLJ_ExOnZdaw" class="klanimate" data-x="100" data-delay="1" target="_blank">Jonathan Estheve Aranda</a>
-                <img src="./assets/icons/logo-clasicaguitarra.png" class="icon-clasicaguitarra klanimate" data-x="-100" data-delay="1.5" alt=""><a href="https://clasicaguitarra.com/#/perfil/5ce5995f41dd1600179f40e1" class="klanimate" data-x="100" data-delay="1.5" target="_blank">Jonathan Estheve Aranda</a>
+                <img src="./assets/icons/icons8-facebook-160.png" class="klanimate" data-x="-100" data-delay="0.5" alt=""><a href="https://www.facebook.com/jonathan.estevearanda" class="klanimate" data-x="100" data-delay="0.5" target="_blank">Jonathan Esteve Aranda</a>
+                <img src="./assets/icons/icons8-youtube-96.png" class="klanimate" data-x="-100" data-delay="1" alt=""><a href="https://www.youtube.com/channel/UCF3VzTUjZsOYLJ_ExOnZdaw" class="klanimate" data-x="100" data-delay="1" target="_blank">Jonathan Esteve Aranda</a>
+                <img src="./assets/icons/logo-clasicaguitarra.png" class="icon-clasicaguitarra klanimate" data-x="-100" data-delay="1.5" alt=""><a href="https://clasicaguitarra.com/#/perfil/5ce5995f41dd1600179f40e1" class="klanimate" data-x="100" data-delay="1.5" target="_blank">Jonathan Esteve Aranda</a>
             </div>
         </div>
     </div>
@@ -160,7 +158,7 @@
             <a id="fLinkContacto" class="btn item-grid-align-center col-3 row-3" href="#contacto">Contacto</a>
             <img class="item-grid-align-center col-4 row-1" src="./assets/icons/footer/icons8-idioma-50.png" alt="">
             <p onclick="changeLanguage('es')" class="btn item-grid-align-center col-4 row-2" href="#"><img class="iconLenguaje" src="./assets/icons/espain.png" alt=""><span id="fLinkEspa">Español</span></p>
-            <p onclick="changeLanguage('en')" class="btn item-grid-align-center col-4 row-3" href="#"><img class="iconLenguaje" src="./assets/icons/reino-unido.png" alt=""><span id="fLinkIng">Ingles</span></p>
+            <p onclick="changeLanguage('en')" class="btn item-grid-align-center col-4 row-3" href="#"><img class="iconLenguaje" src="./assets/icons/reino-unido.png" alt=""><span id="fLinkIng">English</span></p>
             <p class="pBorder col-1-4 row-4"></p>
             <p class="item-grid-align-center pCopyright col-2-3 row-5">© 2019</p>
         </div>
