Modificada biografia, imagenes y titulo de inicio entre otros detalles

--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
         </div>
         <h1 id="h1PantallaBloqueo">Jonathan Esteve Aranda</h1>
         <img id="imgPantallaBloqueo" src="./assets/icons/icons8-guitar.svg" alt="">
-        <h2 id="h2PantallaBloqueo">- Guitarrista Clásico - <br> - Classical Guitarist -</h2>
+        <h2 id="h2PantallaBloqueo">- Classical Guitarist -</h2>
     </div>
-
-    <!-- <img src="./assets/icons/espain.png" class="btn icon-spain" onclick="changeLanguage('es')" alt=""> -->
-    <!-- <img src="./assets/icons/reino-unido.png" class="btn icon-uk" onclick="changeLanguage('en')" alt=""> -->
 
     <div class="bgHome" id="inicio">
         <span class="iconMenu" onclick="toogleNav()"><img src="./assets/icons/icons8-guitar.svg" alt=""></span>
@@ -45,48 +42,43 @@
     </audio>
     <img id="controlAudio" class="btn" onclick="playAndPauseAudio()" src="./assets/icons/icons8-play-50.png" custom-status="pause">
 
-    <div class="container">
-        <div class="inicioImg row-1"><img src="./assets/images/foto3.jpg" class="klanimate" data-x="-100" alt="Imagen Jonathan Esteve Aranda"></div>
-        <div id="biografia" class="inicio row-1">
+    <div id="biografia">
+        <div class="inicioImg">
+            <img src="./assets/images/foto1.jpg" class="klanimate" data-x="-100" alt="Imagen Jonathan Esteve Aranda">
+        </div>
             <h1 id="titleBiografia" class="text-center title klanimate" data-y="-100">Biografía</h1>
-            <p id="biop1" class="klanimate" data-x="100">Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
+            <p id="biop1" class="klanimate p-bio-desc" data-x="100">Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
                 y tras haber obtenido más de 10 premios nacionales e internacionales en prestigiosos concursos 
                 como el Francisco Tárrega de Benicássim, Concurso de música de Benidorm entre otros…Jonathan Esteve Aranda 
                 se sitúa actualmente como uno de los más destacados guitarristas clásicos de su generación.</p>
-            <p id="biop2" class="klanimate" data-x="-100">Su talento, versatilidad y dominio de los diferentes periodos del repertorio para guitarra clásica, 
+            <p id="biop2" class="klanimate p-bio-desc" data-x="-100">Su talento, versatilidad y dominio de los diferentes periodos del repertorio para guitarra clásica, 
                 lo convierten en un músico que toca con una personalidad muy destacada y definida, ligada siempre a 
                 una amplia técnica que ofrece grandes posibilidades sonoras. Su guitarra ha sonado en países Europeos 
                 como España, Francia, Reino Unido…Entre otras, se presenta en importantes salas como: Palacio de ferias y 
                 congresos de Málaga, Teatro Arniches, Auditorio Andrés Gaos, Teatro Concha Segura en España, St Olave Hart Street 
                 (Londres-Inglaterra) Auditorio Maurice Ravel (Francia)…</p>
-            <p id="biop3" class="klanimate" data-x="100">En 2015, destaca su interpretación y grabación en directo del famoso “Concierto de Aranjuez” junto con la orquesta 
+            <p id="biop3" class="klanimate p-bio-desc" data-x="100">En 2015, destaca su interpretación y grabación en directo del famoso “Concierto de Aranjuez” junto con la orquesta 
                 sinfónica Castelar. Ha trabajado y compartido escenario con directores de renombre mundial como José Luis Granados, 
                 Rafael Vilaplana o Salvador Brotons.</p>
-            <p id="biop4" class="klanimate" data-x="-100">Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair de Málaga 
+            <p id="biop4" class="klanimate p-bio-desc" data-x="-100">Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair de Málaga 
                 (2014), XXVIII Curso Internacional de Música de Benidorm, Festival internacional andaluz de Saint-Jean de Luz (Francia). 
                 Su iniciativa para organizar eventos relacionados con el mundo de la guitarra, le llevan a crear el Certamen de guitarra 
                 clásica “Ciudad de Castalla” del cual es promotor y director.</p>
-            <p id="biop5" class="klanimate" data-x="100">Jonathan Esteve nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert, Victor Bravo y Antonio 
+            <p id="biop5" class="klanimate p-bio-desc" data-x="100">Jonathan Esteve nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert, Victor Bravo y Antonio 
                 Clavel en los conservatorios de Villena y Oscar Esplá en Alicante, obtiene el título superior en guitarra con Matrícula 
                 de Honor. Guitarristas como Carles Trepat, Aniello Desiderio, Carlos Bonell… han reconocido y admirado su forma de tocar.</p>
-        </div>
+    </div>
+
+    <div class="container">
         <div id="galeria" class="galeria col-1-2 row-2">
             <h1 id="titleGaleria" class="text-center title klanimate" data-y="100">Galeria</h1>
             <div class="galleria">
                 <img src="./assets/images/galeria/1-min.jpg" alt="">
-                <img src="./assets/images/galeria/2-min.jpg" alt="">
                 <img src="./assets/images/galeria/3-min.jpg" alt="">
                 <img src="./assets/images/galeria/4-min.jpg" alt="">
                 <img src="./assets/images/galeria/5-min.jpg" alt="">
                 <img src="./assets/images/galeria/6-min.jpg" alt="">
-                <img src="./assets/images/galeria/7-min.jpg" alt="">
-                <img src="./assets/images/galeria/8-min.jpg" alt="">
-                <img src="./assets/images/galeria/9-min.jpg" alt="">
-                <img src="./assets/images/galeria/10-min.jpg" alt="">
-                <img src="./assets/images/galeria/11-min.jpg" alt="">
-                <img src="./assets/images/galeria/12-min.jpg" alt="">
                 <img src="./assets/images/galeria/13-min.jpg" alt="">
-                <img src="./assets/images/galeria/14-min.jpg" alt="">
             </div>
         </div>
         <div id="videos" class="videos col-1-2 row-3">
